--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <!-- <link rel="icon" type="image/jpg" href="/logo.jpg" /> -->
+              <!-- <img src={logo} alt='logo' className='w-9 h-9 object-contain' /> -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adrian | JavaScript Mastery Portfolio</title>
+    <title>Minnu Reddy kontham Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
